--- a/src/main/webapp/package.json
+++ b/src/main/webapp/package.json
@@ -5,7 +5,8 @@
   "scripts": {
     "serve": "vue-cli-service serve",
     "build": "vue-cli-service build",
-    "lint": "vue-cli-service lint"
+    "lint": "vue-cli-service lint",
+    "start": "node server.js"
   },
   "dependencies": {
     "@vuelidate/core": "^2.0.0-alpha.32",
@@ -15,6 +16,8 @@
     "bootstrap-vue": "^2.21.2",
     "core-js": "^3.6.5",
     "css-loader": "^6.5.1",
+    "express": "^4.17.1",
+    "serve-static": "^1.14.1",
     "vue": "^2.6.14",
     "vue-style-loader": "^4.1.3",
     "vuelidate": "^0.7.7"
